# plotnine-examples

./: .gitattributes  .gitignore  LICENSE  Makefile  Manifest.in  README.md  README.rst  contributors.txt  how-to-release.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_website.yml
plotnine_examples/: __init__.py
plotnine_examples/examples/: Arrange.ipynb  Beside.ipynb  Compose.ipynb  PlotnineAnimation.ipynb  Stack.ipynb  __init__.py  aes.ipynb  after_scale.ipynb  after_stat.ipynb  facet_grid.ipynb  facet_wrap.ipynb  factor.ipynb  geom_abline.ipynb  geom_area.ipynb  geom_bar.ipynb  geom_boxplot.ipynb  geom_col.ipynb  geom_count.ipynb  geom_density.ipynb  geom_histogram.ipynb  geom_hline.ipynb  geom_line.ipynb  geom_linerange.ipynb  geom_map.ipynb  geom_path.ipynb  geom_point.ipynb  geom_segment.ipynb  geom_smooth.ipynb  geom_step.ipynb  geom_tile.ipynb  geom_violin.ipynb  geom_vline.ipynb  get_aesthetic_limits.ipynb  labs.ipynb  notebook_widgets.ipynb  plot_spacer.ipynb  reorder.ipynb  scale_color_discrete.ipynb  scale_fill_continuous.ipynb  scale_shape_identity.ipynb  (+5 more)
plotnine_examples/notebooks/: __init__.py  geom_point.ipynb  geom_tile.ipynb  theme.ipynb
plotnine_examples/tutorials/: __init__.py  miscalleneous-changing-the-number-of-minor-breaks.ipynb  miscellaneous-a-pyqt5-application.ipynb  miscellaneous-altering-colors.ipynb  miscellaneous-automatic-grouping-insufficient.ipynb  miscellaneous-manipulating-date-breaks-and-date-labels.ipynb  (+6 more)
tools/: change-ggplot-repr  clean-notebook  draw_redraw.py
(+39 files in other folders)
